Fix line endings handling by BestMatchFontSelectorStrategy
DEVSIX-8688